# RPML

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  run_experiments.py  run_multiproc.py
app/backend/: pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20260323_0001_initial_users_debts.py  20260323_0002_optimization_async.py  20260323_0003_dashboard_seed_schema.py  20260401_0004_optimization_modes_mc.py  20260413_0005_dataset_instances_runtime_jobs.py  20260413_0006_plan_analytics_payloads.py
app/backend/src/server/: gradio_api_tester.py  main.py
app/backend/src/server/api/: deps.py
app/backend/src/server/api/v1/: auth.py  dashboard.py  debts.py  demo.py  health.py  optimization.py  plans.py  router.py  scenario.py
app/backend/src/server/application/use_cases/: get_plan.py  run_optimization_async.py  run_optimization_sync.py
app/backend/src/server/config/: settings.py
app/backend/src/server/domain/models/: __init__.py  debt.py  loan_type.py  user.py
app/backend/src/server/infrastructure/auth/: jwt_provider.py  password.py
app/backend/src/server/infrastructure/db/: session.py
app/backend/src/server/infrastructure/queue/: celery_app.py  (+1 more)
app/backend/src/server/services/: dataset_instances.py  demo_seed.py
app/backend/tests/: conftest.py  test_auth_flow.py  test_baseline_consistency_api.py  test_dashboard_api.py  test_debt_loan_types_api.py  test_debts_api.py  test_debts_edit_contract.py  test_demo_seed.py  test_e2e_sync_async_smoke.py  test_error_schema_contract.py  test_health.py  test_horizon_semantics.py  test_instance_builder_real_mapping.py  test_local_env_loading.py  test_openapi_contract.py  test_optimization_async_api.py  test_optimization_monte_carlo_api.py  test_optimization_summary_contract.py  test_optimization_sync.py  test_plans_api.py  test_scenario_profile_api.py  test_schema_migration_smoke.py  test_swagger_ui.py
app/backend/tools/: gradio_api_tester.py
core/rpml/: README.md  hypothesis_testing.ipynb  hypothesis_testing_h2.ipynb  pyproject.toml  solver_analysis.ipynb
core/rpml/RiosSolisDataset/: Data.xlsx  HowToReadTheInstances.txt
core/rpml/docs/result_samples/: Deudas_4_0_0_0_4_120_fijo_fijo_3.json
core/rpml/result_samples/: Deudas_4_0_0_2_2_120_fijo_fijo_0.json  Deudas_4_0_0_2_2_120_fijo_fijo_3_timeline.json
core/rpml/src/: run_experiments.py
core/rpml/src/rpml/: __init__.py  checkpoint.py  cli.py  data_loader.py  income_monte_carlo.py  metrics.py  milp_model.py  timeline_export.py
core/rpml/tests/: test_adapter_contract_boundary.py  test_baseline.py  test_baseline_comprehensive.py  test_budget_policy.py  test_checkpoint.py  test_data_loader.py  test_income_monte_carlo.py  test_metrics_statuses.py  test_milp_model.py  test_package_import.py  test_run_experiments_cli.py
numex-app/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
numex-app/backend/alembic/: env.py
numex-app/backend/alembic/versions/: 001_initial.py  002_supabase_pgvector.py  003_debt_types.py
numex-app/backend/app/: celery_app.py  config.py  main.py
numex-app/backend/app/api/v1/: auth.py  budget.py  chat.py  debts.py  deps.py  goals.py  plans.py  router.py  simulator.py
numex-app/backend/app/core/: database.py  database_sync.py  security.py
numex-app/backend/app/models/: __init__.py  debt.py  goal.py  optimization_plan.py  transaction.py  user.py
numex-app/backend/app/schemas/: auth.py  debt.py
numex-app/backend/app/services/: explanation.py  instance_builder.py  llm_context.py  rpml_optimizer.py  simulator.py
numex-app/backend/app/tasks/: optimize.py
numex-app/backend/rag/: __init__.py  indexer.py  retriever.py
numex-app/backend/rag/knowledge_base/: interpretation.md
(+105 files in other folders)
