[project]
name = "rpml"
version = "0.1.0"
description = "Repayment Planning for Multiple Loans optimization"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.8",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=7.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
