[project]
name = "rpml-workspace"
version = "0.1.0"
description = "Workspace root for RPML and backend"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["app/backend", "core/rpml"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "matplotlib",
    "scipy>=1.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
